# genai-insights-assistant

./: .env.sample  .gitignore  Makefile  README.md  dbt_project.yml  docker-compose.yml  pyproject.toml
agent/: prompt_template.txt  query_executor.py  sql_validator.py  text_to_sql_agent.py
airflow/dags/: etl_dag.py
app/: streamlit_app.py  utils.py
data/: inventory.csv  orders.csv  shipments.csv
dbt/: .user.yml  profiles.yml
dbt/models/marts/: dim_inventory.sql  fct_orders.sql  schema.yml
dbt/models/staging/: sources.yml  stg_inventory.sql  stg_orders.sql  stg_shipments.sql
docker/streamlit/: Dockerfile
logs/airflow/scheduler/: latest
outputs/: orders_by_month_20251010_031403.csv
scripts/: etl.py  ge_checks.py
semantic/: build_semantic_index.py  semantic_builder.py  semantic_layer.json
tests/: test_agent_sql.py  test_etl.py  test_semantic_layer.py
